--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "debug": "^4.1.1",
     "dotenv": "^8.0.0",
     "express": "^4.17.1",
+    "googleapis": "^43.0.0",
     "jsonwebtoken": "^8.5.1",
     "request": "^2.88.0"
   },
