--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "build": "babel ./src --out-dir ./dist",
     "start": "node ./dist/index.js",
     "start-dev": "DEBUG=app/debug nodemon --exec babel-node ./src/index.js",
-    // "heroku-postbuild": "npm run build"
+    "heroku-postbuild": "npm run build"
   },
   "repository": {
     "type": "git",
