--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "A slack bot that can be used to save conversation in an external drive.",
   "main": "index.js",
   "scripts": {
-    "build": "babel ./src --out-dir ./dist",
+    "build": "babel ./src --out-dir ./dist --copy-files",
     "start": "node ./dist/index.js",
     "start-dev": "DEBUG=app/debug nodemon --exec babel-node ./src/index.js",
     "heroku-postbuild": "npm run build"
