--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
   "homepage": "https://github.com/shonubijerry/priapus-slackbot#readme",
   "dependencies": {
     "@babel/runtime": "^7.4.5",
+    "@slack/client": "^5.0.2",
     "async": "^3.1.0",
     "body-parser": "^1.19.0",
     "cors": "^2.8.5",
