--- a/.env.example
+++ b/.env.example
@@ -1,1 +1,7 @@
-BOT_TOKEN=get_it_from_slack
+BOT_TOKEN=
+CLIENT_ID=
+CLIENT_SECRET=
+REDIRECT_URI=
+GOOGLE_CLIENT_ID=
+GOOGLE_CLIENT_SECRET=
+GOOGLE_REDIRECT_URL=
